--- a/index.html
+++ b/index.html
@@ -30,6 +30,38 @@
                 </div>
             </div>
         </header>
+        <!-- Seção de serviços -->
+        <section>
+            <div class="services-container">
+                <div class="service-box">
+                    <div class="service-title" id="gerenciamento-box">
+                         <p>Gerenciamento de Projetos</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="gerenciamento-title">Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, necessitatibus. Aut officia ut non dolore facere minus placeat nobis mollitia distinctio molestiae aspernatur aliquam velit, totam odit. Fugit, fugiat ea.</p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="dev-box">
+                         <p>Desenvolvimento</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="dev-title">Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, necessitatibus. Aut officia ut non dolore facere minus placeat nobis mollitia distinctio molestiae aspernatur aliquam velit, totam odit. Fugit, fugiat ea.</p>
+                    </div>
+                </div>
+                <div class="service-box">
+                    <div class="service-title" id="design-box">
+                         <p>Design UX/UI</p>
+                    </div>
+                    <div class="service-description">
+                        <h3 id="design-title">Lorem ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, necessitatibus. Aut officia ut non dolore facere minus placeat nobis mollitia distinctio molestiae aspernatur aliquam velit, totam odit. Fugit, fugiat ea.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
