--- a/index.html
+++ b/index.html
@@ -62,6 +62,40 @@
                 </div>
             </div>
         </section>
+        <!-- SOBRE A EMPRESA -->
+        <div class="footer-container">
+            <section>
+                <div class="about-container">
+                    <div class="about-card">
+                        <i class="fas fa-server"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis tenetur sit totam odio. Omnis tenetur fugit quibusdam libero facere nam nihil quod. Iste minima qui numquam dolorum eius. Sunt!</p>
+                    </div>
+                
+                    <div class="about-card middle-card">
+                        <i class="fas fa-briefcase"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis tenetur sit totam odio. Omnis tenetur fugit quibusdam libero facere nam nihil quod. Iste minima qui numquam dolorum eius. Sunt!</p>
+                    </div>
+                    <div class="about-card">
+                        <i class="fas fa-tablet-alt"></i>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae reiciendis tenetur sit totam odio. Omnis tenetur fugit quibusdam libero facere nam nihil quod. Iste minima qui numquam dolorum eius. Sunt!</p>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="form-container">
+                    <div class="form-backaground"></div>
+                    <form>
+                        <input type="text" name="nome" id="nome" placeholder="Digite seu nome...">
+                        <input type="email" name="email" id="email" placeholder="Digite seu e-mail...">
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Digite sua mensagem..."></textarea>
+                        <input type="submit" class="submit" value="Enviar">
+                    </form>
+                </div>
+                <div class="copyright">
+                    <p>Copyright &copy; 2021 - Isaias Santnana dos Santos / Udemy</p>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
